# pdf-to-markdown-summarizer

./: .env.example  .gitignore  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml
src/pdf_to_markdown_summarizer/: __init__.py  cli.py  config.py  extractor.py  summarizer.py  utils.py
